<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- SEJLFØRING =====================================-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/SmallTitle"
            android:text="@string/log_sail_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space style="@style/EvenSpace" />

            <com.example.skibslogapp.utility.KingButton
                android:id="@+id/fButton"
                style="@style/DefaultButton"
                android:text="@string/log_sail_fBtn" />

            <Space style="@style/EvenSpace" />

            <com.example.skibslogapp.utility.KingButton
                android:id="@+id/øButton"
                style="@style/DefaultButton"
                android:text="@string/log_sail_oeBtn" />

            <Space style="@style/EvenSpace" />

            <com.example.skibslogapp.utility.KingButton
                android:id="@+id/n1Button"
                style="@style/DefaultButton"
                android:text="@string/log_sail_n1Btn" />

            <Space style="@style/EvenSpace" />

            <com.example.skibslogapp.utility.KingButton
                android:id="@+id/n2Button"
                style="@style/DefaultButton"
                android:text="@string/log_sail_n2Btn" />

            <Space style="@style/EvenSpace" />

            <com.example.skibslogapp.utility.KingButton
                android:id="@+id/n3Button"
                style="@style/DefaultButton"
                android:text="@string/log_sail_n3Btn" />

            <Space style="@style/EvenSpace" />

        </LinearLayout>
    </LinearLayout>

    <!-- HALS-SWITCH =====================================-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/SmallTitle"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0"
            android:text="@string/log_orientation_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Space style="@style/EvenSpace" />

            <com.example.skibslogapp.utility.KingButton
                android:id="@+id/hals_bagbord_btn"
                style="@style/DefaultButton"
                android:layout_width="140dp"
                android:text="@string/log_orientation_port"
                android:textSize="20sp" />

            <Space
                style="@style/EvenSpace"
                android:layout_weight="0.1" />

            <com.example.skibslogapp.utility.KingButton
                android:id="@+id/hals_styrbord_btn"
                style="@style/DefaultButton"
                android:layout_width="140dp"
                android:text="@string/log_orientation_starboard"
                android:textSize="20sp" />

            <Space style="@style/EvenSpace" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>