<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            >

            <TextView
                android:id="@+id/vindretning_text_centered"
                style="@style/SmallTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_wind_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vindretning_text_leftaligned"
                    style="@style/SmallTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/vindretning_input"
                    android:layout_width="75sp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginStart="7dp" />

                <Button
                    android:id="@+id/vindretning_delete"
                    android:layout_width="43dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="7dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/log_button_delete"
                    android:textColor="#2D2F31"
                    android:textSize="22sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Her Slutter test test-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space style="@style/EvenSpace" />

            <Button
                android:id="@+id/nordButton"
                style="@style/DefaultButton"
                android:text="@string/log_button_north" />

            <Space style="@style/EvenSpace" />

            <Button
                android:id="@+id/oestButton"
                style="@style/DefaultButton"
                android:text="@string/log_button_east" />

            <Space style="@style/EvenSpace" />

            <Button
                android:id="@+id/sydButton"
                style="@style/DefaultButton"
                android:text="@string/log_button_south" />

            <Space style="@style/EvenSpace" />

            <Button
                android:id="@+id/vestButton"
                style="@style/DefaultButton"
                android:text="@string/log_button_west" />

            <Space style="@style/EvenSpace" />

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_vind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/OpretLogTextInput"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/vindhastighed_edittext"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/log_wind_windSpeed"
                android:imeOptions="actionDone"
                android:inputType="time"
                android:maxLength="4"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/TextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/log_wind_measuringUnit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textInputLayout_vind"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>